Call Rust from boot assembly code

--- a/src/arch/x86_64/Makefile
+++ b/src/arch/x86_64/Makefile
@@ -3,10 +3,14 @@ LDFLAGS = -n -T link.ld
 AS = nasm
 ASFLAGS = -f elf64
 
+ARCH = x86_64
+TARGET ?= $(ARCH)-unknown-linux-gnu
+RUST_OS := ../../../target/$(TARGET)/debug/libmy_os.a
+
 all: kernel.elf
 
-kernel.elf: $(OBJECTS)
-	ld $(LDFLAGS) $(OBJECTS) -o iso/boot/kernel.elf
+kernel.elf: cargo $(OBJECTS)
+	ld $(LDFLAGS) $(OBJECTS) $(RUST_OS) -o iso/boot/kernel.elf
 
 os.iso: kernel.elf
 	grub-mkrescue -o os.iso iso
@@ -17,5 +21,9 @@ run: os.iso
 %.o: %.s
 	$(AS) $(ASFLAGS) $< -o $@
 
+cargo:
+	cd ../../../
+	@cargo build --target $(TARGET)
+
 clean:
-	rm -rf *.o iso/boot/kernel.elf os.iso
+	rm -rf *.o iso/boot/kernel.elf os.iso bochslog.txt
