--- a/src/arch/i386/Makefile
+++ b/src/arch/i386/Makefile
@@ -3,10 +3,14 @@ LDFLAGS = -T link.ld -melf_i386
 AS = nasm
 ASFLAGS = -f elf
 
+ARCH = i686
+TARGET ?= $(ARCH)-unknown-linux-gnu
+RUST_OS := ../../../target/$(TARGET)/debug/libmy_os.a
+
 all: kernel.elf
 
-kernel.elf: $(OBJECTS)
-	ld $(LDFLAGS) $(OBJECTS) -o iso/boot/kernel.elf
+kernel.elf: cargo $(OBJECTS)
+	ld $(LDFLAGS) $(OBJECTS) $(RUST_OS) -o iso/boot/kernel.elf
 
 os.iso: kernel.elf
 	genisoimage -R                              \
@@ -26,5 +30,9 @@ run: os.iso
 %.o: %.s
 	$(AS) $(ASFLAGS) $< -o $@
 
+cargo:
+	cd ../../../
+	@cargo build --target $(TARGET)
+
 clean:
-	rm -rf *.o iso/boot/kernel.elf os.iso
+	rm -rf *.o iso/boot/kernel.elf os.iso bochslog.txt
